--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
   font-family: Inter,sans-serif;
   font-weight: 900;
 
-  overflow: hidden;
+  /*overflow: hidden;*/
   animation: blur 0.5s ease-out;
 
 }
